--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:26.1.0'
     compile project(':vksdk_library')
+    implementation ("com.github.bumptech.glide:glide:4.7.1") {
+        exclude group: "com.android.support"
+    }
 }
