--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation ("com.github.bumptech.glide:glide:4.7.1") {
         exclude group: "com.android.support"
     }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
